order-service/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service
  namespace: ecommerce

spec:
  replicas: 3

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
      - name: order-service
        image: najira/order-service:6.0
        imagePullPolicy: Always

        ports:
        - containerPort: 3001

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /orders/health/ready        # Kubernetes calls this endpoint to check if the Pod is ready
            port: 3001                 # Port where the application is running

          initialDelaySeconds: 5       # Wait 5 seconds after the container starts before the first check

          periodSeconds: 10            # Check the readiness endpoint every 10 seconds

          timeoutSeconds: 2            # Wait maximum 2 seconds for a response

          failureThreshold: 3         # After 3 consecutive failures, mark the Pod as NotReady
        livenessProbe:
          httpGet:
            path: /orders/health/live
            port: 3001
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3
