order-service/kafka-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kafka-headless
  namespace: ecommerce

spec:
  clusterIP: None     #DNS can resolve the individual StatefulSet Pods.
  selector:
    app: kafka

  ports:
    - port: 9092
      targetPort: 9092

  type: ClusterIP
