order-service/order-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: ecommerce

spec:
  selector:
    app: order-service

  ports:
  - port: 3001
    targetPort: 3001
    # nodePort: 30869

  # type: NodePort # used for external (outside kubernetes)
  # for the use of ingress and used ingress controller called ngnix controller
  type: ClusterIP #  used when there is a internal communication between microservices 
  # type: LoadBalancer #LoadBalancer is a Kubernetes Service type that exposes your application to the outside world using an external IP address.
