order-service/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:
    - host: distributed.service

      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 3001

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3003

          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 3002
